# xyme_mlip

./: .gitignore  README.md  hello.py  notebook.ipynb  pyproject.toml
run_script/: run_mlip_training.py  run_training.py  train_samples.npz  valid_samples.npz
run_script/train_0/: training.log.INFO  training.log.M34D7JJ7Y5.nwilliams.log.INFO.20250115-135416.80001  training.log.M34D7JJ7Y5.nwilliams.log.INFO.20250116-074532.4705
run_script/train_0/checkpoint/: model_checkpoint_19.pkl  model_checkpoint_29.pkl  model_checkpoint_39.pkl  model_checkpoint_49.pkl  model_checkpoint_59.pkl  model_checkpoint_69.pkl  model_checkpoint_79.pkl  model_checkpoint_89.pkl  model_checkpoint_9.pkl  model_checkpoint_99.pkl
src/mlip/: message_passing.py
src/run/: base.py
src/train/batch/: base.py
src/train/loss/: loss.py
src/train/optimizer/: optimizer.py
src/train/pmap/: run_pmap.py  training_pmap.py
src/train/scan/: run_scan.py  training_scan.py
src/train/steps/: steps.py
src/utils/: base.py  containers.py  setup_logging.py  thermodynamics.py
src/utils/analysis/: analysis.py
src/utils/checkpoint/: checkpoint_state.py  checkpoint_utils.py
src/utils/data/: download_data_from_gdml.py  load_data.py  prepare_datasets_from_gdml.py
tests/run_script/: test_run_training.py
tests/src/mlip/: test_message_passing.py
tests/test_run_script/: test_run_training.py
